--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,32 @@
+*{
+    box-sizing: border-box;
+
+}
+
+:root{
+    --mainFont: font-family: 'Inconsolata', monospace;
+    --secondFont: 'Sixtyfour', sans-serif;
+}
+
+
 body {
     background-color: black;
-    color: white;
+    color: blue;
+    font-family: 'Inconsolata', monospace;
 }
 
 header{
     width: 100%;
     background-color: darkgoldenrod;
     height: 100px;
+}
+
+main{
+    padding-left: 40px;
+    padding-right: 40px;
+    height: 100%;
+    width: 100%;
+
 }
 
 footer{
@@ -16,4 +36,48 @@ footer{
     bottom: 0;
     left: 0;
     position: absolute;
+}
+
+#imageContainer{
+    background-color: white;
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.header-container{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 50px 10px;
+    margin: auto;
+}
+
+.logo img{
+    height: 80px;
+    display: flex;
+
+}
+
+li, a{
+    list-style-type: none;
+    text-decoration: none;
+    font-family: var(--secondFont);
+    font-size: 40px;
+}
+
+.nav-links{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-links li a{
+    background-color: darkgreen;
+    color: black;
+    padding-left: 40px;
+    font-family: var(--secondFont);
 }
