--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,12 @@
     --main-font-family: 'League Spartan', sans-serif;
 }
 
-
 body {
     background-color: #3A2A53;
     color: black;
     font-family: 'Inconsolata', monospace;
-    width: 100%;
     font-family: var(--main-font-family);
+    height: 100vh;
 }
 
 header{
@@ -29,8 +28,6 @@ main{
     padding-right: 40px;
     height: 100%;
     width: 100%;
-    
-
 }
 
 a {
@@ -42,18 +39,14 @@ a {
 
 footer{
     width: 100%;
-    height: 100px;
-    
-
-    
-    
+    bottom: 0;
+    left: 0;
+    position:relative;
 }
 
 
 
 .header-container{
-    width: 100%;
-    height: 100px;
     display: flex;
     justify-content: space-between;
     padding: 10px 50px 10px;
@@ -125,7 +118,7 @@ li, a{
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 20px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Adjust the values as needed */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); 
     max-width: 900px;
 }
 
@@ -188,7 +181,7 @@ li, a{
     align-items: center;
     margin: 0 auto;
     max-width: 800px; 
-    height: 100%;
+
     padding: 0 20px; 
 
     margin-top: 100px;
@@ -381,6 +374,52 @@ h2{
 
 .checkout-btn:hover {
     background-color: #0056b3;
+}
+
+.order-confirmation-container {
+    max-width: 800px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.order-confirmation-container h1 {
+    margin-bottom: 20px;
+}
+
+.order-confirmation-container p {
+    margin-bottom: 10px;
+}
+
+.order-details {
+    margin-top: 30px;
+}
+
+.order-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.order-item img {
+    width: 100px;
+    border-radius: 5px;
+}
+
+.item-details {
+    margin-left: 20px;
+    text-align: left;
+}
+
+.item-details h3 {
+    margin-bottom: 5px;
+}
+
+.order-total {
+    margin-top: 20px;
+}
+
+.order-total h2 {
+    font-weight: bold;
 }
 
 .hamburgerMenuContainer{
