--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,28 @@ li, a{
 .add-to-cart-btn:hover {
     background-color: #0056b3;
 }
+
+
+.category-buttons {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.category-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 0 10px;
+    background-color: #3A2A53;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.category-button:hover {
+    background-color: #5e4a7d;
+}
 /* ----------------------------------*/ 
 
 
