--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ li, a{
     transition: transform 0.2s;
     margin: 10px;
     box-shadow: 0 0 2px #ccc;
-    max-width: 200px;
+    max-width: 180px;
     
 }
 
@@ -463,23 +463,27 @@ h2{
     font-weight: bold;
 }
 
-.hamburgerMenuContainer{
-    display: none;
-}
-
-#hamburgerMenuIcon{
-    display: none;
-}
 
 
 @media (max-width: 1100px) {
-    #hamburgerMenuIcon {
-        display: block;
-        
+
+    .items-container{
+        grid-template-columns: auto auto auto;
     }
+
+   
 
     .nav-links{
         display: none;
     }
+
+}
+
+@media (max-width: 800px) {
+
+    .items-container{
+        grid-template-columns: auto auto;
+    }
+
 
 }
