--- a/css/styles.css
+++ b/css/styles.css
@@ -10,23 +10,26 @@
     --main-font-family: 'League Spartan', sans-serif;
 }
 
-body {
+body,html {
     background-color: #3A2A53;
     color: black;
     font-family: 'Inconsolata', monospace;
     font-family: var(--main-font-family);
     height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 header{
-    
+
     background: #2c3e50; 
 }
 
 main{
     padding-left: 40px;
     padding-right: 40px;
-    height: 100vh;
+    
     width: 100%;
 }
 
@@ -39,6 +42,48 @@ a {
 
 footer{
     width: 100%;
+    background-color: #2c3e50;
+    
+}
+
+
+/* Footer content */
+.footer-container{
+    display: flex;
+    height: 100px;
+    bottom: 0;
+    left: 0;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.logo-section{
+    
+}
+
+.logo-section > img{
+    width: 30px;
+}
+
+.footer-links{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.quick-links{
+
+}
+
+.quick-links > h3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Google icons */
@@ -53,42 +98,41 @@ footer{
 
 
 
-.header-container{
+.header-container {
     display: flex;
-    justify-content: space-between;
-    padding: 10px 50px 10px;
-    align-items: center;
-
+    justify-content: space-between; 
+    padding: 10px 50px;
+    align-items: center; 
+    flex-wrap: wrap; 
 }
 
-.logo img{
-    height: 60px;
-
+.logo img {
+    height: 60px; 
 }
 
-li, a{
-    list-style-type: none;
-    text-decoration: none;
-    font-family: var(--secondFont);
+.header-container .nav-container {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1; 
 }
 
 .nav-links {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
     list-style: none;
     padding: 0;
+    margin: 0; 
+    flex-grow: 1; 
 }
 
 .nav-links li {
-    margin: 0 10px;
+   
 }
 
 .nav-links li a {
     color: black;
     text-decoration: none;
-    font-family: var(--secondFont);
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
@@ -96,6 +140,13 @@ li, a{
 
 .nav-links li a:hover {
     background-color: #f0f0f0;
+}
+
+
+li, a {
+    list-style-type: none;
+    text-decoration: none;
+    font-family: var(--secondFont);
 }
 
 
@@ -120,7 +171,6 @@ li, a{
     display: grid;
     grid-template-columns: auto auto auto auto;
     gap: 10px;
-    background-color: #3A2A53;
     margin: 0 auto;
     justify-content: center;
     margin-top: 20px;
@@ -128,6 +178,8 @@ li, a{
     border-radius: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); 
     max-width: 900px;
+    margin-top: 40px;
+    margin-bottom: 100px;
 }
 
 .sale-text {
@@ -142,41 +194,63 @@ li, a{
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: var(--product-card-background-color);
+    background-color: #2c3e50;
     border-radius: 10px;
     padding: 10px;
     transition: transform 0.2s;
     margin: 10px;
     box-shadow: 0 0 2px #ccc;
-    max-width: 180px;
-    
+    max-width: 170px;
+    justify-content: space-between;
+    height: auto; 
 }
 
 .product-container:hover {
     transform: translateY(-3px);
-    box-shadow: 0 0 5px #ccc;
+    box-shadow: 0 0 5px #9d1717;
 }
 
 .product-container img {
     width: 150px;
     height: auto;
-    margin-bottom: 10px;
+    margin: 0 auto 10px; 
 }
 
 .product-title {
-    font-size: 20px;
+    font-size: 16px;
+    height: 40px; 
+    overflow: hidden; 
     margin-bottom: 10px;
+    color: white;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
 }
 
-.product-discounted-price {
-    color: #00a65a; /* Green color for discounted price */
+.price-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.product-discounted-price, .product-regular-price, .regular-price-discount-price {
+    font-size: 20px;
     font-weight: bold;
     margin-bottom: 5px;
 }
 
+.product-discounted-price {
+    color: #00a65a; 
+}
+
 .product-regular-price {
+    color: #000; 
+}
+
+/* Regular price with a line through for displaying if the product is on sale */
+.regular-price-discount-price {
     text-decoration: line-through;
-    color: #999; /* Gray color for regular price */
+    color: #999; 
 }
 
 
@@ -188,10 +262,11 @@ li, a{
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    max-width: 800px; 
+    max-width: 1200px; 
 
     padding: 0 20px; 
-
+    background-color: white;
+    
     margin-top: 100px;
 }
 
@@ -222,7 +297,7 @@ li, a{
 
 .add-to-cart-btn {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #762223;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -232,7 +307,7 @@ li, a{
 }
 
 .add-to-cart-btn:hover {
-    background-color: #0056b3;
+    background-color: #5e4a7d;
 }
 
 
@@ -294,15 +369,16 @@ h2{
 }
 
 
-.my-account p {
+.my-account-icon {
     margin: 0; 
     font-weight: 500; 
     font-size: 20px;
 }
 
-.my-account i{
+.my-account {
     margin-left: 10px;
 }
+
 
 #shopping-cart-icon{
     font-size: 40px;
@@ -407,7 +483,7 @@ h2{
 
 .checkout-btn {
     padding: 12px 24px;
-    background-color: #007bff;
+    background-color: #0056b3;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -416,8 +492,24 @@ h2{
 }
 
 .checkout-btn:hover {
-    background-color: #0056b3;
+    background-color: #07396f;
 }
+
+.checkout-btn-disabled{
+    padding: 12px 24px;
+    background-color: #aeb0b1;
+    color: #757575;
+    border: 1px solid #bdbdbd;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    cursor: not-allowed;
+}
+
+.checkout-btn-disabled:hover{
+    background-color: #ffffff;
+}
+
 
 .order-confirmation-container {
     max-width: 800px;
