--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ li, a {
     max-width: 300px;
     height: auto;
     margin-right: 20px;
+    
 }
 
 .product-page-details {
@@ -294,7 +295,7 @@ li, a {
 .product-page-price {
     font-size: 24px;
     font-weight: bold;
-    color: #007BFF; 
+    color: #222; 
 }
 
 .age-rating, .genre-text, .released {
