--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap');
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
 
 }
 
-:root{
+:root {
     --main-font-family: 'League Spartan', sans-serif;
 }
 
-body,html {
+body,
+html {
     background-color: #3A2A53;
     color: black;
     font-family: 'Inconsolata', monospace;
@@ -21,17 +22,39 @@ body,html {
     flex-direction: column;
 }
 
-header{
-    padding-left: 40px;
-    padding-right: 40px;
-    background: #2c3e50; 
+html{
+    overflow-x: hidden;
+  /* Fix for scrollbar jumping */
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
-main{
+body{
+    display: flex;
+    flex-direction: column;
+    animation: fadeIn 0.5s ease-out;
+}
+
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+
+header {
     padding-left: 40px;
     padding-right: 40px;
-    
-    width: 100%;
+    background: #2c3e50;
+}
+
+main {
+    flex-grow: 1;
+    margin-top: 10px;
+    margin-bottom: 10px; /* Adjust based on your footer height */
+    padding: 0 40px;
 }
 
 
@@ -41,10 +64,13 @@ a {
 }
 
 
-footer{
-    width: 100%;
+footer {
+    bottom: 0;
+    left: 0;
+    position: relative;
     background-color: #2c3e50;
-    
+
+
 }
 
 /*Terms and conditions page*/
@@ -79,7 +105,7 @@ footer{
 }
 
 /* Footer content */
-.footer-container{
+.footer-container {
     display: flex;
     height: 100px;
     bottom: 0;
@@ -92,25 +118,21 @@ footer{
     padding-right: 40px;
 }
 
-.logo-section{
-    
-}
+.logo-section {}
 
-.logo-section > img{
+.logo-section>img {
     width: 60px;
 }
 
-.footer-links{
+.footer-links {
     display: flex;
     flex-direction: column;
 }
 
 
-.quick-links{
+.quick-links {}
 
-}
-
-.quick-links > h3{
+.quick-links>h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -119,11 +141,11 @@ footer{
 
 /* Google icons */
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+    font-variation-settings:
+        'FILL'0,
+        'wght'400,
+        'GRAD'0,
+        'opsz'24
 }
 
 
@@ -131,35 +153,33 @@ footer{
 
 .header-container {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     padding: 10px 50px;
-    align-items: center; 
-    flex-wrap: wrap; 
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .logo img {
-    height: 60px; 
+    height: 60px;
 }
 
 .header-container .nav-container {
     display: flex;
     justify-content: center;
-    flex-grow: 1; 
+    flex-grow: 1;
 }
 
 .nav-links {
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
     list-style: none;
     padding: 0;
-    margin: 0; 
-    flex-grow: 1; 
+    margin: 0;
+    flex-grow: 1;
 }
 
-.nav-links li {
-   
-}
+.nav-links li {}
 
 .nav-links li a {
     color: black;
@@ -174,7 +194,8 @@ footer{
 }
 
 
-li, a {
+li,
+a {
     list-style-type: none;
     text-decoration: none;
     font-family: var(--secondFont);
@@ -183,21 +204,21 @@ li, a {
 
 
 
- /* Hero Container */
- .hero-container {
+/* Hero Container */
+.hero-container {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.hero-container img{
+.hero-container img {
     height: 400px;
     width: 100%;
 }
 
 /* Sale Items Container */
 .items-container {
-    padding: 40px; 
+    padding: 40px;
     text-align: center;
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -207,7 +228,7 @@ li, a {
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 20px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     max-width: 900px;
     margin-top: 40px;
     margin-bottom: 100px;
@@ -233,7 +254,7 @@ li, a {
     box-shadow: 0 0 2px #ccc;
     max-width: 170px;
     justify-content: space-between;
-    height: auto; 
+    height: auto;
 }
 
 .product-container:hover {
@@ -244,17 +265,17 @@ li, a {
 .product-container img {
     width: 150px;
     height: auto;
-    margin: 0 auto 10px; 
+    margin: 0 auto 10px;
 }
 
 .product-title {
     font-size: 16px;
-    height: 40px; 
-    overflow: hidden; 
+    height: 40px;
+    overflow: hidden;
     margin-bottom: 10px;
     color: white;
     display: -webkit-box;
-    -webkit-line-clamp: 2; 
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
@@ -264,24 +285,26 @@ li, a {
     align-items: center;
 }
 
-.product-discounted-price, .product-regular-price, .regular-price-discount-price {
+.product-discounted-price,
+.product-regular-price,
+.regular-price-discount-price {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 5px;
 }
 
 .product-discounted-price {
-    color: #00a65a; 
+    color: #00a65a;
 }
 
 .product-regular-price {
-    color: #000; 
+    color: #000;
 }
 
 /* Regular price with a line through for displaying if the product is on sale */
 .regular-price-discount-price {
     text-decoration: line-through;
-    color: #999; 
+    color: #999;
 }
 
 
@@ -291,68 +314,75 @@ li, a {
 .product-page-container {
     display: flex;
     justify-content: center;
-    align-items: flex-start; 
+    align-items: flex-start;
     margin: 0 auto;
     max-width: 1200px;
     padding: 20px;
     background-color: white;
     margin-top: 100px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    border-radius: 8px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
 
 .product-page-image img {
     max-width: 300px;
     height: auto;
     margin-right: 20px;
-    
+
 }
 
 .product-page-details {
     text-align: left;
-    flex: 1; 
+    flex: 1;
 }
 
-.product-page-title, .product-page-description, .product-page-price, .age-rating, .genre-text, .released {
+.product-page-title,
+.product-page-description,
+.product-page-price,
+.age-rating,
+.genre-text,
+.released {
     margin-bottom: 20px;
-    color: #333; 
+    color: #333;
 }
 
 .product-page-title {
-    font-size: 28px; 
+    font-size: 28px;
     color: #222;
 }
 
 .product-page-price {
     font-size: 24px;
     font-weight: bold;
-    color: #222; 
+    color: #222;
 }
 
-.age-rating, .genre-text, .released {
+.age-rating,
+.genre-text,
+.released {
     font-size: 18px;
     font-weight: normal;
-    color: #666; 
+    color: #666;
 }
 
 
 .genre-text {
-    background-color: #f2f2f2; 
+    background-color: #f2f2f2;
     padding: 5px 10px;
-    border-radius: 5px; 
-    display: inline-block; 
+    border-radius: 5px;
+    display: inline-block;
 }
 
 .age-rating {
-    display: inline-block; 
-    background-color: #FFD700; 
-    color: #333; 
+    display: inline-block;
+    background-color: #FFD700;
+    color: #333;
     padding: 5px 10px;
     border-radius: 5px;
 }
 
 .released {
-    font-style: italic; 
+    font-style: italic;
 }
 
 
@@ -395,25 +425,26 @@ li, a {
 .category-button:hover {
     background-color: #5e4a7d;
 }
-/* ----------------------------------*/ 
+
+/* ----------------------------------*/
 
 
 
 /* Footer Icons */
 .footer-icons {
-    background: #2c3e50; 
-    color: #fff; 
-    padding: 20px; 
+    background: #2c3e50;
+    color: #fff;
+    padding: 20px;
     text-align: center;
     height: 100%;
 }
 
 .footer-icons i {
-    font-size: 24px; 
-    margin: 0 10px; 
+    font-size: 24px;
+    margin: 0 10px;
 }
 
-h2{
+h2 {
     font-size: 30px;
 }
 
@@ -423,30 +454,12 @@ h2{
     align-items: center;
 }
 
-.my-account {
-    margin-right: 20px; 
-    display: flex;
-    align-items: center;
-    color: #00ff1a; 
-    text-decoration: none; 
-    font-size: 30px; 
-}
 
 
-.my-account-icon {
-    margin: 0; 
-    font-weight: 500; 
-    font-size: 20px;
-}
 
-.my-account {
-    margin-left: 10px;
-}
-
-
-#shopping-cart-icon{
+#shopping-cart-icon {
     font-size: 40px;
-    color: #00ff1a; 
+    color: #00ff1a;
 }
 
 .shopping-cart p {
@@ -456,22 +469,23 @@ h2{
 }
 
 .cart-counter {
-    background-color: #ff0000; 
-    color: #ffffff; 
-    border-radius: 50%; 
-    padding: 0.2rem 0.4rem; 
-    font-size: 10px; 
-    position: absolute; 
+    background-color: #ff0000;
+    color: #ffffff;
+    border-radius: 50%;
+    padding: 0.2rem 0.4rem;
+    font-size: 10px;
+    position: absolute;
     top: 13px;
-    right: 60px;
+    right: 90px;
     display: none;
-    
+
 }
 
 /* cart-styles.css */
 
 .cart-page-container {
     max-width: 800px;
+
     margin: 50px auto;
     padding: 20px;
     background-color: #f9f9f9;
@@ -559,7 +573,7 @@ h2{
     background-color: #07396f;
 }
 
-.checkout-btn-disabled{
+.checkout-btn-disabled {
     padding: 12px 24px;
     background-color: #aeb0b1;
     color: #757575;
@@ -570,7 +584,7 @@ h2{
     cursor: not-allowed;
 }
 
-.checkout-btn-disabled:hover{
+.checkout-btn-disabled:hover {
     background-color: #ffffff;
 }
 
@@ -594,7 +608,7 @@ h2{
 
 .order-confirmation-container p {
     margin-bottom: 10px;
-    
+
 }
 
 .order-details {
@@ -629,17 +643,33 @@ h2{
     font-weight: bold;
 }
 
-
+/* Error MEssage */
+.error-message {
+    position: fixed; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    padding: 20px;
+    background-color: #ffdddd; 
+    color: #d8000c; /
+    border: 1px solid #d8000c;
+    border-radius: 5px;
+    text-align: center;
+    width: auto;
+    max-width: 80%; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    z-index: 1000; 
+  }
 
 @media (max-width: 1100px) {
 
-    .items-container{
+    .items-container {
         grid-template-columns: auto auto auto;
     }
 
-   
 
-    .nav-links{
+
+    .nav-links {
         display: none;
     }
 
@@ -653,13 +683,14 @@ h2{
 
     .product-page-image img {
         margin-right: 0;
-        margin-bottom: 20px; 
+        margin-bottom: 20px;
     }
 
     .product-page-details {
         text-align: center;
     }
-    .items-container{
+
+    .items-container {
         grid-template-columns: auto auto;
     }
 
