--- a/css/styles.css
+++ b/css/styles.css
@@ -651,7 +651,7 @@ h2 {
     transform: translate(-50%, -50%); 
     padding: 20px;
     background-color: #ffdddd; 
-    color: #d8000c; /
+    color: #d8000c; 
     border: 1px solid #d8000c;
     border-radius: 5px;
     text-align: center;
