--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,65 @@ footer {
     text-decoration: underline;
 }
 
+/* Contact page*/
+.contact-section {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 40px;
+    text-align: center;
+}
+
+.contact-section h1 {
+    margin-bottom: 20px;
+    font-size: 2.5rem;
+    color: #000000;
+}
+
+.contact-section p {
+    margin-bottom: 40px;
+    color: #000000;
+}
+
+.form-group {
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+    color: #000000;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.submit-btn {
+    background-color: #005AFC; 
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.submit-btn:hover {
+    background-color: #0046c8; 
+}
+
+#thankYouMessage{
+    display: none;
+}
+
+
+
 /* Footer content */
 .footer-container {
     display: flex;
@@ -428,9 +487,29 @@ a {
     background-color: #5e4a7d;
 }
 
-/* ----------------------------------*/
 
 
+/* About page */
+.about-section {
+    background-color: #1e1e1e; 
+    color: #ffffff; 
+    padding: 40px; 
+    border-radius: 8px; 
+    margin: 20px auto; 
+    max-width: 800px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.about-section h1 {
+    color: #4CAF50; 
+    margin-bottom: 20px; 
+}
+
+.about-section p {
+    margin-bottom: 16px;
+    line-height: 1.6; 
+    text-align: justify; 
+}
 
 
 h2 {
@@ -474,7 +553,7 @@ h2 {
 
 .cart-page-container {
     max-width: 800px;
-
+    color: black;
     margin: 50px auto;
     padding: 20px;
     background-color: #f9f9f9;
@@ -580,6 +659,7 @@ h2 {
 
 .order-confirmation-container {
     max-width: 800px;
+    color: black;
     margin: 50px auto;
     padding: 20px;
     background-color: #f9f9f9;
