--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,8 @@ footer {
     justify-content: center;
 }
 
+
+
 /* Google icons */
 .material-symbols-outlined {
     font-variation-settings:
@@ -267,8 +269,47 @@ a
     font-family: var(--secondFont);
 }
 
+/* Hamburger Menu Icon */
+.menu-btn {
+    cursor: pointer;
+    z-index: 20; 
+    position: fixed; 
+    top: 20px;
+    left: 20px;
+    display: none;
+}
+
+.menu-btn__burger .material-symbols-outlined {
+    font-size: 40px; 
+    color: #fff; 
+}
 
 
+
+.nav-links ul {
+    list-style-type: none;
+    text-align: center;
+}
+
+.nav-links ul li {
+    margin: 15px 0;
+}
+
+.nav-links ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 24px;
+    transition: color 0.3s ease;
+}
+
+.nav-links ul li a:hover {
+    color: #ddd;
+}
+
+/* Display Navigation Links When Menu is Open */
+.nav-links.open {
+    display: flex;
+}
 
 /* Hero Container */
 .hero-container {
@@ -758,13 +799,58 @@ h2 {
 
 @media (max-width: 1100px) {
 
-    .items-container {
-        grid-template-columns: auto auto auto;
-    }
+/* Hamburger Menu Icon */
+.menu-btn {
+    cursor: pointer;
+    z-index: 20; 
+    position: fixed; 
+    top: 20px;
+    left: 20px;
+    display: flex;
+}
 
-    .nav-links {
-        display: none;
-    }
+
+
+
+.nav-links {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9); 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 15;
+}
+
+.nav-links ul {
+    list-style-type: none;
+    text-align: center;
+}
+
+.nav-links ul li {
+    margin: 15px 0;
+}
+
+.nav-links ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 24px;
+    transition: color 0.3s ease;
+}
+
+.nav-links ul li a:hover {
+    color: #ddd;
+}
+
+/* Display Navigation Links When Menu is Open */
+.nav-links.open {
+    display: flex;
+}
+
 
 }
 
